k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careerhub-frontend
  namespace: careerhub
  labels:
    app: careerhub-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: careerhub-frontend
  template:
    metadata:
      labels:
        app: careerhub-frontend
    spec:
      containers:
        - name: frontend
          image: vijaykardak/careerhub-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
